Overflow bug fix

--- a/ritzkick/styles/BubbleEffect.css
+++ b/ritzkick/styles/BubbleEffect.css
@@ -189,5 +189,5 @@
     z-index: 0;
     width: 10%;
     height: auto;
-    position: absolute;
+    position: fixed;
 }
